[workspace]
members = [
    "programs/monopoly"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Devin <devin@magicblock.gg>"]
repository = "https://github.com/aldrin-labs/monopoly"
homepage = "https://github.com/aldrin-labs/monopoly"
license = "MIT"

[workspace.dependencies]
solana-program = "=1.18.26"
sha3 = { version = "0.10.8", default-features = false }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
