[package]
name = "monopoly"
version = "0.1.0"
edition = "2021"
description = "Solana Monopoly Game - Native Implementation"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18.26"
sha3 = "0.10.8"
thiserror = "1.0"
num-derive = "0.4"
num-traits = "0.2"
bytemuck = { version = "1.14", features = ["derive"] }

[features]
no-entrypoint = []
test-bpf = []

[dev-dependencies]
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
tokio = { version = "1.36.0", features = ["full"] }
