[package]
name = "cards-system"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cards_system"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]

[dependencies]
bolt-lang = { workspace = true }
anchor-lang = { workspace = true }
solana-program = "1.16"
common = { path = "../../components/common" }
player-component = { path = "../../components/player/player-component" }
game-state-component = { path = "../../components/game-state/game-state-component" }
