[package]
name = "movement"
version = "0.1.12"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "movement"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []


[dependencies]
bolt-lang = { workspace = true }
bolt-component = { workspace = true }
solana-program = { workspace = true }
common = { path = "../../components/common" }
player-component = { path = "../../components/player/player-component" }
game-state-component = { path = "../../components/game-state/game-state-component" }
position = { version = "0.1.12", path = "../../components/position", features = ["cpi"] }
serde = { version = "1.0", features = ["derive"] }
