[package]
name = "game-state-component"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "game_state_component"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]

[dependencies]
bolt-lang = { workspace = true }
anchor-lang = { workspace = true }
solana-program = { workspace = true }
common = { path = "../../common" }
