[package]
name = "cards-system"
version = "0.1.0"
edition = "2021"

[dependencies]
bolt-lang = { workspace = true }
anchor-lang = "0.28.0"
solana-program = "1.16"
common = { path = "../../components/common" }
player-component = { path = "../../components/player/player-component" }
game-state-component = { path = "../../components/game-state/game-state-component" }
